[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/_common/Materials/SmallWhiteSquare.png" type="Texture" id=1]
[ext_resource path="res://scenes/City/2D_WorldMap/DynamicObjects/DynamicDoor.gd" type="Script" id=2]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( -32, -8, 31, -8, 31, 9, -32, 9 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -32, -8, 31, -8, 31, 9, -32, 9 ) ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38, 54 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.4039, 8.79879 )

[node name="DynamicDoor" type="Node2D"]
script = ExtResource( 2 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
visible = false
navpoly = SubResource( 2 )

[node name="OpeningZone" type="Area2D" parent="."]

[node name="DoorstepCollisionShape2D" type="CollisionShape2D" parent="OpeningZone"]
shape = SubResource( 3 )

[node name="InitDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="DoorSprite" type="Sprite" parent="."]
self_modulate = Color( 0.682353, 0.521569, 0.207843, 1 )
position = Vector2( -41, 0 )
scale = Vector2( 4.76454, 0.340956 )
texture = ExtResource( 1 )
offset = Vector2( 8.59611, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="DoorSprite"]
position = Vector2( 8.60525, 0 )
scale = Vector2( 0.253968, 1 )

[node name="ObstacleCollisionShape2D" type="CollisionShape2D" parent="DoorSprite/StaticBody2D"]
position = Vector2( 3.15905e-06, 0 )
shape = SubResource( 1 )

[node name="InteractInstructionLabel" type="Label" parent="."]
visible = false
margin_left = -19.0
margin_top = 18.0
margin_right = 21.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 19, 7 )
text = "[F]"
align = 1

[connection signal="body_entered" from="OpeningZone" to="." method="_on_OpeningZone_body_entered"]
[connection signal="body_exited" from="OpeningZone" to="." method="_on_OpeningZone_body_exited"]
[connection signal="timeout" from="InitDelayTimer" to="." method="_on_InitDelayTimer_timeout"]
